# ai_visibility

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  pyproject.toml
.claude/agents/: doc-keeper.md
clients/: README.md
clients/_template/: README.md
clients/changan-auto/: README.md  dataforseo_keywords.py  dataforseo_ranked_keywords.py  dataforseo_related_keywords.py
clients/changan-auto/crawl-stats-by-response/: Table.csv
clients/changan-auto/crawl-stats-extracted/: Chart.csv  Metadata.csv
clients/changan-auto/docs/: changan-uk-datalayer-spec.md  client_response.html  client_response_events.html
clients/changan-auto/reports/: changan-image-processor-bug-report.md  changan-server-error-investigation.md  engagement-analysis.html
clients/hisense/: Hisense_USA_Data_Project_Proposal_Final.md  README.md
clients/hisense/docs/: case-study-changan.md
clients/samsung/: README.md  app.py  fetch_cited_pages.py  fetch_competitor_concept_prompts.py  fetch_concept_mentions.py  fetch_concept_mentions_by_tag.py  fetch_concept_prompts.py  fetch_he_url_prompts.py  fetch_prompt_responses.py  fetch_prompt_urls.py  fetch_url_prompts.py  fetch_us_url_prompts.py  generate_dashboard.py  groq_kimi.py  load_cited_pages.py  load_concept_mentions.py  load_concept_mentions_by_tag.py  load_concept_prompts.py  load_to_supabase.py  load_url_prompts.py  semrush-api-endpoints.md  test_semrush_api.py
clients/samsung/assets/: tv_prompts.json  tv_prompts_semrush_import_v2.csv
docs/: GA-MCP-SETUP.md  build-log.md
scripts/: README.md  embed_logo.py  ga_add_user.py  ga_auth_admin.ps1
(+111 files in other folders)
